<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="136dp"
            android:layout_height="204dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/poster"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_title"
            style="@style/TextContent.Value"
            android:layout_marginEnd="8dp"
            android:text="@string/movie_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_label_rd"
            style="@style/TextContent.Label"
            android:layout_marginStart="8dp"
            android:text="@string/release_date"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_title" />


        <TextView
            android:id="@+id/detail_release_date"
            style="@style/TextContent.Value"
            android:text="@string/release_date"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_label_rd" />

        <RatingBar
            android:id="@+id/vote_count"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clickable="false"
            android:ellipsize="end"
            android:isIndicator="true"
            android:numStars="5"
            android:text="@string/vote_count"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_original_language" />

        <TextView
            android:id="@+id/vote_average"
            style="@style/TextContent.Label"
            android:text="@string/vote_count"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/vote_count" />

        <TextView
            android:id="@+id/detail_label_original_language"
            style="@style/TextContent.Label"
            android:layout_marginBottom="100dp"
            android:text="@string/original_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_release_date"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_original_language"
            style="@style/TextContent.Value"
            android:text="@string/original_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_label_original_language"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_label_overview"
            style="@style/TextContent.Value"
            android:text="@string/overview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_poster" />

        <TextView
            android:id="@+id/detail_overview"
            style="@style/TextContent.Label"
            android:text="@string/overview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_label_overview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>